--- a/IT_Tracker/src/main/resources/templates/create.html
+++ b/IT_Tracker/src/main/resources/templates/create.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Jason Tse -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,14 +8,10 @@
     <title>Create Ticket</title>
 </head>
 <header>
-    <nav>
-        <a href="/tickets">View Tickets</a>
-        <a href="/">Create Ticket</a>
-    </nav>
 
 </header>
 <body>
-<form action="/" method="POST">
+<form action="/ticket" method="POST">
 
     <label for="ticketTitle">Title:</label>
     <input type="text" id="ticketTitle" name="ticketTitle" ><br><br>
