--- a/IT_Tracker/src/main/resources/templates/list.html
+++ b/IT_Tracker/src/main/resources/templates/list.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
+<!-- Jason Tse-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Ticket List</title>
     <link href="/css/pico.min.css" rel="stylesheet">
 </head>
 <header>
-        <nav>
-            <a href="/tickets">View Tickets</a>
-            <a href="/">Create Ticket</a>
-        </nav>
 </header>
 <body>
     <h2>Ticket List</h2>
+
     <table border="1">
         <thead>
             <tr>
+                <th>Ticket ID</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Created On</th>
@@ -24,6 +23,7 @@
         </thead>
         <tbody>
             <tr th:each="ticket : ${tickets}">
+                <td th:text="${ticket.ticketId}"></td>
                 <td th:text="${ticket.ticketTitle}"></td>
                 <td th:text="${ticket.ticketDescription}"></td>
                 <td th:text="${ticket.ticketDate}"></td>
@@ -32,5 +32,13 @@
             </tr>
         </tbody>
     </table>
+    <form action="/ticket/clear" method="post">
+        <label for="ticketId">Enter Ticket ID for Completion:</label>
+        <select name="ticketId" id="ticketId">
+            <option th:each="ticket : ${tickets}" th:text="${ticket.ticketId}" th:value="${ticket.ticketId}"></option>
+        </select>
+        <button type="submit">Clear Ticket</button>
+    </form>
+
 </body>
 </html>
