--- a/IT_Tracker/src/main/resources/templates/login.html
+++ b/IT_Tracker/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <link href="/css/pico.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="root">
 
 <form action="/" method="POST">
     <label for="studentNumber">Student Number:</label>
